fix(nav-float): add z-index
in order to fix a bug where the audio-player
was placed above the navigation

--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -31,6 +31,7 @@ nav {
 		position: fixed;
 		background: $black-color;
 		border-bottom: 2px solid $white-color;
+		z-index: 100;
 	}
 }
 
